# cp-week

./: .gitignore  README.md  pyproject.toml
01_money/: solve_cp.py
02_sudoku/: solve_lp.py
hospital-management/: README.md
puzzles/01_money/: problem.md  solve_ilp.py
puzzles/02_sudoku/: problem.md
train/: checker.py  draw.py  solve_cp_bigM.py  solve_cp_minmax.py  solve_ilp.py
train-scheduling/: solution.json
train-scheduling/monday/: README.md  SOLUTION.md  heuristic.py  solution.json  solve_greedy.py
train-scheduling/monday/data/: monfri.json
train-scheduling/monday/src/: checker.py  solve_cp_bigM.py  solve_cp_minmax.py  solve_greedy.py  solve_ilp.py  solve_naive.py
train-scheduling/tuesday/: README.md  SOLUTION.md  convert.py  solution.json  solve_cp_minmax.py  solve_ilp.py
train-scheduling/tuesday/src/: checker.py  solve_cp_minmax.py  solve_cp_minmax_optimized.py  solve_ilp.py
train-scheduling/visualization/: README.md  package.json  pnpm-lock.yaml  solution.json
train-scheduling/visualization/app/: layout.tsx  page.tsx  solution-data.tsx
train-scheduling/visualization/components/: dashboard-filters.tsx  driver-gantt-chart.tsx  kpi-dashboard.tsx  solution-upload.tsx  train-gantt-chart.tsx  warning-panel.tsx
train-scheduling/visualization/data/: sample-data.ts  solution-context.tsx
train-scheduling/visualization/hooks/: use-dashboard-data.ts
train-scheduling/visualization/lib/: schedule-utils.ts
train-scheduling/wednesday/: README.md  monfri.json  solve_cp_minmax_optimized.py  viz_timetable.py
(+10 files in other folders)
