[project]
name = "cp-week"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gurobipy>=12.0.3",
    "gymnasium>=1.2.0",
    "numpy>=2.3.2",
    "ortools>=9.14.6206",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]
